--- a/android/Nintendo Switch Pro Controller.cfg
+++ b/android/Nintendo Switch Pro Controller.cfg
@@ -16,7 +16,7 @@
 # Evaluated by David Hedlund.
 
 input_driver = "android"
-input_device = "Pro Controller"
+input_device = "Nintendo Switch Pro Controller"
 input_device_display_name = "Nintendo Switch Pro Controller"
 
 input_vendor_id = "1406"
