--- a/android/Sony_DualShock_4_Controller_v2.cfg
+++ b/android/Sony_DualShock_4_Controller_v2.cfg
@@ -27,7 +27,7 @@ input_r_x_plus_axis = "+2"
 input_r_x_minus_axis = "-2"
 input_r_y_plus_axis = "+3"
 input_r_y_minus_axis = "-3"
-input_menu_toggle_btn = "109"
+input_menu_toggle_btn = "110"
 
 input_b_btn_label = "Cross"
 input_y_btn_label = "Square"
@@ -53,4 +53,4 @@ input_r_x_plus_axis_label = "Right Analog X+"
 input_r_x_minus_axis_label = "Right Analog X-"
 input_r_y_plus_axis_label = "Right Analog Y+"
 input_r_y_minus_axis_label = "Right Analog Y-"
-input_menu_toggle_btn_label = "Touchpad"
+input_menu_toggle_btn_label = "PS"
