--- a/android/Sony_DualShock_4_Controller_v2.cfg
+++ b/android/Sony_DualShock_4_Controller_v2.cfg
@@ -1,6 +1,6 @@
 input_driver = "android"
 input_device = "Sony Interactive Entertainment Wireless Controller"
-input_device_display_name = "Sony DualShock 4 Controller (v2)"
+input_device_display_name = "Sony DualShock 4 v2 Controller"
 input_vendor_id = "1356"
 input_product_id = "2508"
 input_b_btn = "96"
