--- a/android/Wireless Controller.cfg
+++ b/android/Wireless Controller.cfg
@@ -19,8 +19,8 @@ input_r_btn = "103"
 #   input_l2_btn = "104"
 #   input_r2_btn = "105"
 # Those 2 lines are a downgrade from the 2 following lines which additionally allow l2/r2 to be polled as analog axises :
-input_l2_axis = "+6"
-input_r2_axis = "+7"
+input_l2_axis = "+6" # Analog indication verified in Remote RetroPad: Yes
+input_r2_axis = "+7" # Analog indication verified in Remote RetroPad: Yes
 input_l3_btn = "106"
 input_r3_btn = "107"
 input_l_x_plus_axis = "+0"
