--- a/android/Nintendo Switch Pro Controller.cfg
+++ b/android/Nintendo Switch Pro Controller.cfg
@@ -1,4 +1,5 @@
 input_driver = "android"
+input_device = "Nintendo Switch Pro Controller"
 input_vendor_id = "1406"
 input_product_id = "8201"
 input_b_btn = "96"
