--- a/android/Wireless Controller.cfg
+++ b/android/Wireless Controller.cfg
@@ -40,8 +40,8 @@ input_a_btn_label = "Circle"
 input_x_btn_label = "Triangle"
 input_l_btn_label = "L1"
 input_r_btn_label = "R1"
-input_l2_axis_label = "L2 Analog"
-input_r2_axis_label = "R2 Analog"
+input_l2_axis_label = "L2 Trigger"
+input_r2_axis_label = "R2 Trigger"
 input_l3_btn_label = "L3"
 input_r3_btn_label = "R3"
 input_l_x_plus_axis_label = "Left Analog X+"
