--- a/android/Wireless Controller.cfg
+++ b/android/Wireless Controller.cfg
@@ -1,8 +1,12 @@
 input_driver = "android"
 input_device = "Wireless Controller"
-input_device_display_name = "Sony DualShock 4 v2 Controller"
+input_device_display_name = "Wireless Controller (DualShock 4 v2)"
 input_vendor_id = "1356"
 input_product_id = "2508"
+input_device_alt1 = "Sony Computer Entertainment Wireless Controller"
+input_device_display_name_alt1 = "Sony Computer Entertainment Wireless Controller (DualShock 4 v1)"
+input_vendor_id_alt1 = "1356"
+input_product_id_alt1 = "1476"
 input_b_btn = "96"
 input_y_btn = "99"
 input_select_btn = "109"
